# chessopp

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac
doc/: version.texi
man/: Makefile.am  manmods
misc/: chessopp.eng
misc/svn-ignore/: svn-ignore-files-man.txt  svn-ignore-files-src.txt
po/: Makevars  chessopp.pot  da.po  de.po  eo.po  es.po  fr.po  gl.po  it.po  nb.po  nl.po  pt_BR.po  sr.po  sv.po  uk.po  vi.po  zh_CN.po
src/: Makefile.am  chessoppu  chessoppx  main.cc
src/adapter/: adapter.cpp  option.cpp  util.cpp
src/engine/: book.cpp  eval.cpp
src/frontend/: cmd.cc  common.h  engine.cc  init.cc  input.cc  lex.yylexpgn.cc  move.cc  output.cc  pgn.cc  version.h
